# Nether-Client

./: .gitignore  API_GUIDE.md  README.md  build-app.bat  index.html  mohist-versions-example.json  package-lock.json  package.json  start-nether-client.bat  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: automation.rs  main.rs
src/components/: AdvancedMonitoring.tsx  AutomationFeatures.tsx  JavaVersionInfo.tsx  JavaVersionSelector.tsx  JavaVersionWarning.tsx  ModConflictAnalyzer.tsx  ModerationPanel.tsx  ServerEditModal.tsx  ServerStats.tsx  Sidebar.tsx  TitleBar.tsx
src/components/builders/: ForgeBuilder.tsx  JavaBuilder.tsx  MohistBuilder.tsx  NeoForgeBuilder.tsx  PaperBuilder.tsx
src/config/: api.ts
src/contexts/: LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useJavaDetection.ts  useRamOptions.ts  useServers.ts  useSystemInfo.ts  useSystemTray.ts
src/i18n/: translations.ts
src/locales/: index.ts  translations.md
src/pages/: Dashboard.tsx  Help.tsx  Mods.tsx  Network.tsx  Players.tsx  Servers.tsx  Settings.tsx  Terminal.tsx
src/services/: forgeAPI.ts  minecraftAPI.ts  modConflictDetector.ts  modProfilesManager.ts  mohistAPI.ts  neoforgeAPI.ts  paperAPI.ts
src/types/: index.ts
src/utils/: downloadManager.ts  formatters.ts  pathManager.ts
